--- a/Share Beauty App/Views/UtmMaskEfficacyView.xib
+++ b/Share Beauty App/Views/UtmMaskEfficacyView.xib
@@ -8,6 +8,14 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Reader-Bold.otf">
+            <string>Reader-Bold</string>
+        </array>
+        <array key="Reader-Regular.otf">
+            <string>Reader</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -15,20 +23,56 @@
             <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xpa-p5-UGF">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xpa-p5-UGF">
                     <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                     <subviews>
-                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XcZ-rd-TyU">
-                            <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fBA-L4-0fQ" userLabel="ContentView">
+                            <rect key="frame" x="0.0" y="0.0" width="1024" height="1026"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cRY-do-qRS">
+                                    <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                </view>
+                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XcZ-rd-TyU">
+                                    <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="utm_mask_efficacy01.png" translatesAutoresizingMaskIntoConstraints="NO" id="lqV-ZV-7E2">
+                                            <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="When the mask is used within 72 hours of exposure to stress, it truly prevents skin damage!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bTN-5V-tz5">
+                                            <rect key="frame" x="20" y="15" width="708" height="64"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="23"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sm8-OR-y1v">
+                                            <rect key="frame" x="140" y="100" width="670" height="97"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <string key="text">To replicate a harsh environment, Shiseido conducted a test in which researchers applied a pharmaceutical agent to the skin to create an artificially rough condition. Skin applied only with the roughness-inducing agent showed damage continued to escalate 72 hours after application. On the other hand, skin applied with the roughness-inducing agent as well as Ultimune Serum and Amplifying Night Mask showed no signs of damage 72 hours later. 
+</string>
+                                            <fontDescription key="fontDescription" name="Reader" family="Reader" pointSize="15"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </view>
+                            </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </view>
-                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cRY-do-qRS">
-                            <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1026" id="awk-WU-pIR"/>
+                            </constraints>
                         </view>
                     </subviews>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="fBA-L4-0fQ" secondAttribute="trailing" id="JN8-3m-Ul6"/>
+                        <constraint firstItem="fBA-L4-0fQ" firstAttribute="leading" secondItem="xpa-p5-UGF" secondAttribute="leading" id="Kos-Ev-Vt4"/>
+                        <constraint firstAttribute="bottom" secondItem="fBA-L4-0fQ" secondAttribute="bottom" id="RFq-uz-7IN"/>
+                        <constraint firstItem="fBA-L4-0fQ" firstAttribute="top" secondItem="xpa-p5-UGF" secondAttribute="top" id="X5O-A4-Fm0"/>
+                        <constraint firstItem="fBA-L4-0fQ" firstAttribute="width" secondItem="xpa-p5-UGF" secondAttribute="width" id="lht-qP-ID4"/>
+                    </constraints>
                 </scrollView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -40,10 +84,16 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="mContentView" destination="fBA-L4-0fQ" id="p9X-4S-N89"/>
                 <outlet property="mGraphV" destination="XcZ-rd-TyU" id="5cL-gM-528"/>
                 <outlet property="mPercentageV" destination="cRY-do-qRS" id="FT2-yV-gWB"/>
                 <outlet property="mScrollV" destination="xpa-p5-UGF" id="KbF-9m-qs9"/>
+                <outlet property="mSubTextLabel" destination="sm8-OR-y1v" id="CWV-qM-Je4"/>
+                <outlet property="mTitleLabel" destination="bTN-5V-tz5" id="1Bj-eT-ZIR"/>
             </connections>
         </view>
     </objects>
+    <resources>
+        <image name="utm_mask_efficacy01.png" width="4202" height="2140"/>
+    </resources>
 </document>
