--- a/Share Beauty App/Views/CollectionProductView.xib
+++ b/Share Beauty App/Views/CollectionProductView.xib
@@ -84,19 +84,16 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Gin-Jb-LHK">
-                            <rect key="frame" x="25" y="310" width="230" height="35"/>
+                            <rect key="frame" x="25" y="310" width="230" height="5.5"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.25" translatesAutoresizingMaskIntoConstraints="NO" id="gh9-E5-ROw">
-                                    <rect key="frame" x="0.0" y="0.0" width="230" height="32"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="32" id="egx-Xj-jO3"/>
-                                    </constraints>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="gh9-E5-ROw">
+                                    <rect key="frame" x="0.0" y="0.0" width="230" height="0.0"/>
                                     <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="18"/>
                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4zU-9I-lwT">
-                                    <rect key="frame" x="0.0" y="35" width="230" height="0.0"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4zU-9I-lwT">
+                                    <rect key="frame" x="0.0" y="5.5" width="230" height="0.0"/>
                                     <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -104,7 +101,7 @@
                             </subviews>
                             <constraints>
                                 <constraint firstItem="4zU-9I-lwT" firstAttribute="leading" secondItem="Gin-Jb-LHK" secondAttribute="leading" id="HBh-de-L4d"/>
-                                <constraint firstItem="4zU-9I-lwT" firstAttribute="top" secondItem="gh9-E5-ROw" secondAttribute="bottom" constant="3" id="NSn-q2-vEu"/>
+                                <constraint firstItem="4zU-9I-lwT" firstAttribute="top" secondItem="gh9-E5-ROw" secondAttribute="baseline" constant="10" id="NSn-q2-vEu"/>
                                 <constraint firstAttribute="trailing" secondItem="gh9-E5-ROw" secondAttribute="trailing" id="WWA-1U-VME"/>
                                 <constraint firstItem="gh9-E5-ROw" firstAttribute="top" secondItem="Gin-Jb-LHK" secondAttribute="top" id="Zwc-xz-Nvq"/>
                                 <constraint firstItem="gh9-E5-ROw" firstAttribute="leading" secondItem="Gin-Jb-LHK" secondAttribute="leading" id="ito-xr-5Uc"/>
@@ -113,7 +110,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="04s-w3-rNg">
-                            <rect key="frame" x="25" y="345" width="231" height="94"/>
+                            <rect key="frame" x="25" y="315.5" width="231" height="123.5"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2bB-Qu-At3">
                                     <rect key="frame" x="0.0" y="5" width="20" height="20"/>
